syntax = "proto3";

package pb;

import "google/api/annotations.proto";

option go_package = "github.com/hiamthach/micro-chat/pb";

service RoomService {
  rpc GetRoom(RoomId) returns (Room) {
    option (google.api.http) = {
      get: "/rooms/{id}"
    };
  }

  rpc CreateRoom (CreateRoomRequest) returns (CreateRoomResponse) {
    option (google.api.http) = {
      post: "/rooms"
      body: "*"
    };
  }

  rpc JoinRoom(JoinRoomRequest) returns (JoinRoomResponse) {
    option (google.api.http) = {
      post: "/rooms/join/{id}"
      body: "*"
    };
  }
}

message Room {
  string id = 1;
  repeated string participants = 2;
  string createdBy = 3;
  uint32 room_size = 4;
}

message RoomId {
  string id = 1;
}

message CreateRoomRequest {
  string owner = 1;
  uint32 room_size = 2;
}

message CreateRoomResponse {
  Room room = 1;
}

message JoinRoomRequest {
  string id = 1;
  string username = 2;
}

message JoinRoomResponse {
  string room_id = 1;
  string username = 2;
  string message = 3;
}